# texlab

./: .gitignore  Cargo.toml  package-lock.json  package.json
.github/workflows/: ci.yml  main.yml
crates/texlab/: Cargo.toml  README.md
crates/texlab-core/: Cargo.toml
lib/tree-sitter-bibtex/: .gitignore  README.md
lib/tree-sitter-latex/: .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json
lib/tree-sitter-latex/benches/: bench_main.rs
lib/tree-sitter-latex/examples/: texlab.tex
lib/tree-sitter-latex/src/: commands.h  scanner.c  trie.h
src/features/formatting/: latexindent.rs
